--- a/index.html
+++ b/index.html
@@ -3,18 +3,101 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <link rel="stylesheet" href="css/style.css" />
+    <title>Moshify</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <nav class="nav-bar">
       <ul>
-        <li class=""><span></span>Moshify</li>
-        <li class="">Hosting</li>
-        <li class="">Vps</li>
-        <li class="">Domain</li>
-        <li class="">Pricing</li>
+        <a href="">
+          <li class=""><span></span>Moshify</li>
+        </a>
+        <a href="">
+          <li class="">Hosting</li>
+        </a>
+        <a href="">
+          <li class="">Vps</li>
+        </a>
+        <a href="">
+          <li class="">Domain</li>
+        </a>
+        <a href="">
+          <li class="">Pricing</li>
+        </a>
       </ul>
     </nav>
+    <div class="hero-container">
+      <div class="text-container">
+        <h1>Cloud Hosting for Pros</h1>
+        <p>Deploy your websights less than 60 seconds</p>
+        <a href=""><button class="btn">Get Started</button></a>
+      </div>
+      <div class="img-container">
+        <img src="images/hero.png" alt="a picture of stg " />
+      </div>
+    </div>
+    <section class="search-container">
+      <h1>Starting at $10 per month</h1>
+      <p>Lorem ipsum , adipisicing elit..</p>
+      <div class="search-bar">
+        <input type="text" placeholder="Enter domain name here...." />
+        <button>Search</button>
+      </div>
+
+      <div class="badge-container">
+        <span class="badges">.com $9</span>
+        <span class="badges">.sg $10</span>
+        <span class="badges"> .space $11</span>
+        <span class="badges"> .info $14</span>
+        <span class="badges"> .net $10</span>
+      </div>
+    </section>
+    <div class="card-container">
+      <div class="card">
+        <div class="card-upper">
+          <span>Entery</span>
+          <h2>14$ <span>/month</span></h2>
+          <p>Easy to satrt cloud</p>
+        </div>
+        <ul>
+          <li>100 GB SSD Sotrage</li>
+          <li>Unlimited Websites</li>
+          <li>Unlimited Bandwidth</li>
+          <li>100 GB SSD Sotrage</li>
+          <li>3 GB RAM</li>
+        </ul>
+        <a href=""><button class="btn">BUY</button></a>
+      </div>
+      <div class="card">
+        <div class="card-upper">
+          <span>Entery</span>
+          <h2>14$ <span>/month</span></h2>
+          <p>Easy to satrt cloud</p>
+        </div>
+        <ul>
+          <li>100 GB SSD Sotrage</li>
+          <li>Unlimited Websites</li>
+          <li>Unlimited Bandwidth</li>
+          <li>100 GB SSD Sotrage</li>
+          <li>3 GB RAM</li>
+        </ul>
+        <a href=""><button>BUY</button></a>
+      </div>
+      <div class="card">
+        <div class="card-upper">
+          <span>Entery</span>
+          <h2>14$ <span>/month</span></h2>
+          <p>Easy to satrt cloud</p>
+        </div>
+        <ul>
+          <li>100 GB SSD Sotrage</li>
+          <li>Unlimited Websites</li>
+          <li>Unlimited Bandwidth</li>
+          <li>100 GB SSD Sotrage</li>
+          <li>3 GB RAM</li>
+        </ul>
+        <a href=""><button>BUY</button></a>
+      </div>
+    </div>
   </body>
 </html>
